--- a/src/styles/works.module.css
+++ b/src/styles/works.module.css
@@ -15,7 +15,7 @@
 
 .headline1 {
   @apply transition-all duration-300 opacity-0;
-  animation: head1 1s cubic-bezier(0.165, 0.84, 0.44, 1) 0.25s 1 forwards;
+  animation: head1 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) 0.25s 1 forwards;
 }
 
 /*  */
@@ -46,13 +46,13 @@
 
 .headline2 {
   @apply relative inline-block transition-all duration-300 opacity-0;
-  animation: head2 1s cubic-bezier(0.165, 0.84, 0.44, 1) 1s 1 forwards;
+  animation: head2 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) 0.5s 1 forwards;
 }
 
 .headline2::after {
   content: "";
   @apply absolute left-0 -bottom-1 h-[3px] w-0 bg-neutral;
-  animation: undershow 0.2s cubic-bezier(0.215, 0.61, 0.355, 1) 2s 1 forwards;
+  animation: undershow 0.2s cubic-bezier(0.215, 0.61, 0.355, 1) 1s 1 forwards;
 }
 
 /*  */
@@ -77,10 +77,10 @@
 
 .year::after {
   content: "";
-  @apply absolute w-1 h-full left-[50%] top-[84px] bg-secondary;
+  @apply absolute w-1 h-full left-[50%] top-[54px] bg-secondary;
   transform: translate(-50%);
 }
 
 .yearHead {
-  @apply sticky top-0 text-center mx-auto text-primary text-3xl font-black p-6 z-50;
+  @apply sticky top-[70px] text-center mx-auto text-primary text-3xl font-black p-2 bg-base-100 h-[54px] z-[1];
 }
